2005-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-decay-scores, gnus-score-load-file): Allow
	to apply decay on score files matching a regexp.

2004-12-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-line-format-alist): Keep the forward
	compatibility in %g and %c.

2004-12-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-line-format-alist): Use decoded group
	name for only %g and %c.
	(gnus-group-insert-group-line): Bind gnus-tmp-decoded-group instead
	of gnus-tmp-group to decoded group name.
	(gnus-group-make-rss-group): Exclude `/'s from group names.

2004-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-get-encoding): Fix regexp.

2004-12-27  Simon Josefsson  <jas@extundo.com>

	* mm-bodies.el (mm-body-encoding): Don't permit 7-bit to be used
	when mm-use-ultra-safe-encoding is enabled (e.g., for PGP/MIME)
	and we have trailing white space.  Reported by Werner Koch
	<wk@gnupg.org>.

2004-12-17  Kim F. Storm  <storm@cua.dk>

	* gnus-group.el (gnus-group-mode-map): Map follow-link to mouse-face.

	* gnus-sum.el (gnus-summary-mode-map): Likewise.

2004-12-26  Tsuyoshi AKIHO  <akiho@kawachi.zaq.ne.jp>

	* gnus-sum.el (gnus-summary-walk-group-buffer): Decode group name.

2004-12-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el: Require rfc2047 and mml.
	(nnrss-file-coding-system): New variable.
	(nnrss-format-string): Redefine it as an inline function.
	(nnrss-decode-group-name): New function.
	(nnrss-string-as-multibyte): Remove.
	(nnrss-retrieve-headers): Decode group name; don't use
	nnrss-format-string.
	(nnrss-request-group): Decode group name.
	(nnrss-request-article): Decode group name; allow a Message-ID as
	well as an article number; don't use nnrss-format-string; encode a
	Message-ID string which may contain non-ASCII characters; use
	mml-to-mime to compose a MIME article.
	(nnrss-request-expire-articles): Decode group name.
	(nnrss-request-delete-group): Decode group name.